--- a/MovieWeatherApp/MovieWeatherApp.csproj
+++ b/MovieWeatherApp/MovieWeatherApp.csproj
@@ -6,4 +6,14 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Interface\" />
+      <Folder Include="Services\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+      <PackageReference Include="RestSharp" Version="113.0.1-alpha.0.1" />
+    </ItemGroup>
+
 </Project>
